--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -207,8 +207,8 @@
         <cxf.servicemix.jaxrs.specs.version>2.9.1</cxf.servicemix.jaxrs.specs.version>
         <cxf.javax.mail.version>1.4.4</cxf.javax.mail.version>
         <cxf.jaxb.bundle.version>2.3.0</cxf.jaxb.bundle.version>
-        <cxf.saaj-impl.bundle.version>1.3.23_2</cxf.saaj-impl.bundle.version>
-        <cxf.osgi.saaj.version>[1.3,2)</cxf.osgi.saaj.version>
+        <cxf.saaj-impl.bundle.version>1.4.0_1</cxf.saaj-impl.bundle.version>
+        <cxf.osgi.saaj.version>[1.4,2)</cxf.osgi.saaj.version>
         <cxf.stax-ex.version>1.7.6</cxf.stax-ex.version>
         <cxf.wsdl4j.bundle.version>1.6.3_1</cxf.wsdl4j.bundle.version>
         <cxf.xmlsec.bundle.version>2.1.2</cxf.xmlsec.bundle.version>
@@ -2836,7 +2836,7 @@
                 <dependency>
                     <groupId>com.sun.xml.messaging.saaj</groupId>
                     <artifactId>saaj-impl</artifactId>
-                    <version>1.4.0-b03</version>
+                    <version>1.4.0</version>
                 </dependency>
                 <dependency>
                     <groupId>org.jacorb</groupId>
