--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -155,7 +155,7 @@
         <cxf.servlet-api-2.5.artifact>geronimo-servlet_2.5_spec</cxf.servlet-api-2.5.artifact>
         <cxf.servlet-api-2.5.version>1.2</cxf.servlet-api-2.5.version>
         <cxf.slf4j.version>1.7.25</cxf.slf4j.version>
-        <cxf.specs.jaxws.api.version>1.2</cxf.specs.jaxws.api.version>
+        <cxf.specs.jaxws.api.version>2.3_1</cxf.specs.jaxws.api.version>
         <cxf.spring.version>5.1.3.RELEASE</cxf.spring.version>
         <cxf.spring.boot.version>2.1.1.RELEASE</cxf.spring.boot.version>
         <cxf.spring.security.version>5.1.2.RELEASE</cxf.spring.security.version>
